k8s/22-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: mini-eshop
  labels:
    app: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
