k8s/51-catalog-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-api
  namespace: mini-eshop
  labels:
    app: catalog-api
spec:
  type: ClusterIP
  selector:
    app: catalog-api
  ports:
    - name: http
      port: 8080
      targetPort: http
