k8s/53-orders-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-api
  namespace: mini-eshop
  labels:
    app: orders-api
spec:
  type: ClusterIP
  selector:
    app: orders-api
  ports:
    - name: http
      port: 8080
      targetPort: http
