k8s/55-notifications-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifications-api
  namespace: mini-eshop
  labels:
    app: notifications-api
spec:
  type: ClusterIP
  selector:
    app: notifications-api
  ports:
    - name: http
      port: 8080
      targetPort: http
