k8s/57-reviews-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviews-api
  namespace: mini-eshop
  labels:
    app: reviews-api
spec:
  type: ClusterIP
  selector:
    app: reviews-api
  ports:
    - name: http
      port: 8080
      targetPort: http
