k8s/59-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: mini-eshop
  labels:
    app: gateway
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
    - name: http
      port: 8080
      targetPort: http
